# anyburl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
anyburl/: __init__.py  _logging.py  anyburl.py  enums.py  evaluation.py  exceptions.py  graph.py  metrics.py  prediction.py  rule.py
anyburl/sampler/: __init__.py  base.py  config.py  sampler.py  uniform_sampler.py  weighted_sampler.py
anyburl/walk/: __init__.py  config.py  relation_weighted_selector.py  uniform_selector.py  walker.py
benchmark/: _helpers.py  conftest.py  test_evaluator.py  test_graph.py  test_prediction.py  test_sampler.py  test_walker.py
scripts/: example.py
tests/: conftest.py  test_evaluation.py  test_evaluator.py  test_graph.py  test_prediction.py  test_rule.py  test_sampler.py  test_walker.py
